----------------------------------------------------------------------
Mon Dec 22 13:39:02 2003                        Michael Jennings (mej)

These two are going away.
----------------------------------------------------------------------
Mon Dec 22 15:40:43 2003                        Michael Jennings (mej)

That too.
----------------------------------------------------------------------
Mon Dec 22 15:50:35 2003                        Michael Jennings (mej)

Minor tweaks to utils/Etbg_update_list.
----------------------------------------------------------------------
Mon Dec 22 15:56:51 2003                        Michael Jennings (mej)

Backported changes to menu generation.
----------------------------------------------------------------------
Wed Jan  7 15:08:24 2004                        Michael Jennings (mej)

Disable build-time check for screen.
----------------------------------------------------------------------
Sun Jan 11 17:09:07 2004                        Michael Jennings (mej)

It's too bad you can't just say, "Copyright 1997-2999."
----------------------------------------------------------------------
Mon Jan 19 21:02:30 2004                        Michael Jennings (mej)

Patch from David Lloyd <dmlloyd@tds.net> for overstrike support.
----------------------------------------------------------------------
Wed Feb 11 14:06:20 2004                        Michael Jennings (mej)

Fixed handling of escape sequences while printing.  Pointed out by
Tom A. Cox <tomc@hot.rr.com>.
----------------------------------------------------------------------
Sun Feb 29 17:51:48 2004                        Michael Jennings (mej)

Disable use of ~/user.cfg as requested by Laurence J. Lane
<ljlane@debian.org>.
----------------------------------------------------------------------
Mon Mar  1 16:53:34 2004                        Michael Jennings (mej)

Merging in new backgrounds.
----------------------------------------------------------------------