@@ -4,7 +4,7 @@ PATH=$PATH:/usr/bin:/bin:/usr/local/bin:/usr/ccs/bin:/usr/contrib/bin:/usr/ucb/b
 export PATH
 
 AC_INIT(src/feature.h)
-AM_INIT_AUTOMAKE(Eterm, 0.9.2)
+AM_INIT_AUTOMAKE(Eterm, 0.9.3)
 
 dnl# Set some basic variables
 DATE="`date '+%d %B %Y'`"
@@ -656,7 +656,7 @@ AC_ARG_ENABLE(multi-charset,
             else
               MULTI_CHARSET_TYPE="$enableval"
             fi], [
-            if (xlsfonts | grep 10646 >&5 2>&5); then
+            if (xlsfonts 2>/dev/null | grep 10646 >&5 2>&5); then
               MULTI_CHARSET_TYPE="unicode"
             else
               MULTI_CHARSET_TYPE=""
@@ -791,9 +791,9 @@ AC_ARG_ENABLE(xim,
 AC_CHECK_LIB(X11, _Xsetlocale, AC_DEFINE(X_LOCALE), AC_DEFINE(NO_XLOCALE))
 
 # For multibyte selection handling
-if test "$MULTICHAR_ENCODING" != "none"; then
+#if test "$MULTICHAR_ENCODING" != "none"; then
   AC_CHECK_LIB(Xmu, XmuInternAtom)
-fi
+#fi
 
 # check X11R6 for XIM
 if test "$XIM" = "TRUE"; then
