@@ -167,8 +167,6 @@ begin menu
   TILE_IMAGE_ITEM(`A Distant Star', `a_distant_star.png')
   TILE_IMAGE_ITEM(`Alpha Centauri', `alpha_centauri.png')
   TILE_IMAGE_ITEM(`Army Brat', `army_brat.png')
-  TILE_IMAGE_ITEM(`Blackstone', `blackstone.jpg')
-  TILE_IMAGE_ITEM(`Blood Spilt', `blood_spilt.png')
   TILE_IMAGE_ITEM(`Bubbly1', `bubbly1.jpg')
   TILE_IMAGE_ITEM(`Bubbly2', `bubbly2.jpg')
   TILE_IMAGE_ITEM(`Bubbly3', `bubbly3.jpg')
@@ -180,20 +178,16 @@ begin menu
   TILE_IMAGE_ITEM(`Connect The Dots', `connect_the_dots.png')
   TILE_IMAGE_ITEM(`Cyber Bg', `cyber_bg.jpg')
   TILE_IMAGE_ITEM(`Darkness', `darkness.png')
-  TILE_IMAGE_ITEM(`Egg', `egg.jpg')
   TILE_IMAGE_ITEM(`Falling', `falling.png')
   TILE_IMAGE_ITEM(`Fascination', `fascination.png')
   TILE_IMAGE_ITEM(`Firestorm', `firestorm.png')
   TILE_IMAGE_ITEM(`For A Moment', `for_a_moment.png')
-  TILE_IMAGE_ITEM(`Giger1', `giger1.jpg')
-  TILE_IMAGE_ITEM(`Giger2', `giger2.jpg')
   TILE_IMAGE_ITEM(`Graffiti', `graffiti.png')
   TILE_IMAGE_ITEM(`Gray Matter', `gray_matter.png')
   TILE_IMAGE_ITEM(`Lightning Crashes', `lightning_crashes.png')
   TILE_IMAGE_ITEM(`Marbles', `marbles.png')
   TILE_IMAGE_ITEM(`Moody Blues', `moody_blues.png')
   TILE_IMAGE_ITEM(`Murky Depths', `murky_depths.png')
-  TILE_IMAGE_ITEM(`Nebula', `nebula.jpg')
   TILE_IMAGE_ITEM(`Oil On Canvas', `oil_on_canvas.png')
   TILE_IMAGE_ITEM(`Pebble Beach', `pebble_beach.png')
   TILE_IMAGE_ITEM(`Ping Pong', `ping-pong.png')
@@ -205,7 +199,6 @@ begin menu
   TILE_IMAGE_ITEM(`Shattered Windows', `shattered_windows.png')
   TILE_IMAGE_ITEM(`Shock And Awe', `shock_and_awe.png')
   TILE_IMAGE_ITEM(`Sitting In Acid', `sitting_in_acid.png')
-  TILE_IMAGE_ITEM(`Space', `space.png')
   TILE_IMAGE_ITEM(`Spring Rain', `spring_rain.png')
   TILE_IMAGE_ITEM(`Stained Glass', `stained_glass.png')
   TILE_IMAGE_ITEM(`Tales Of Earthsea', `tales_of_earthsea.png')
@@ -222,12 +215,9 @@ end
 begin menu
   title Scaled
   SCALE_IMAGE_ITEM(`Day Night', `day-night.jpg')
-  SCALE_IMAGE_ITEM(`Good Morning', `good-morning.jpg')
   SCALE_IMAGE_ITEM(`Midnight Sky', `midnight_sky.png')
   SCALE_IMAGE_ITEM(`Neopolis Horizon', `Neopolis-horizon.jpg')
-  SCALE_IMAGE_ITEM(`Ripple', `ripple.jpg')
   SCALE_IMAGE_ITEM(`Sailors Delight', `sailors_delight.png')
-  SCALE_IMAGE_ITEM(`Sunset', `sunset.jpg')
   SCALE_IMAGE_ITEM(`Wasteland', `wasteland.jpg')
   SCALE_IMAGE_ITEM(`Wintertree', `wintertree.jpg')
 end
