@@ -280,14 +280,6 @@ begin menu
     action string "\e]20;tile/army_brat.png;0+0:tile\a"
   end
   begin menuitem
-    text "Blackstone"
-    action string "\e]20;tile/blackstone.jpg;0+0:tile\a"
-  end
-  begin menuitem
-    text "Blood Spilt"
-    action string "\e]20;tile/blood_spilt.png;0+0:tile\a"
-  end
-  begin menuitem
     text "Bubbly1"
     action string "\e]20;tile/bubbly1.jpg;0+0:tile\a"
   end
@@ -332,10 +324,6 @@ begin menu
     action string "\e]20;tile/darkness.png;0+0:tile\a"
   end
   begin menuitem
-    text "Egg"
-    action string "\e]20;tile/egg.jpg;0+0:tile\a"
-  end
-  begin menuitem
     text "Falling"
     action string "\e]20;tile/falling.png;0+0:tile\a"
   end
@@ -350,14 +338,6 @@ begin menu
   begin menuitem
     text "For A Moment"
     action string "\e]20;tile/for_a_moment.png;0+0:tile\a"
-  end
-  begin menuitem
-    text "Giger1"
-    action string "\e]20;tile/giger1.jpg;0+0:tile\a"
-  end
-  begin menuitem
-    text "Giger2"
-    action string "\e]20;tile/giger2.jpg;0+0:tile\a"
   end
   begin menuitem
     text "Graffiti"
@@ -384,16 +364,8 @@ begin menu
     action string "\e]20;tile/murky_depths.png;0+0:tile\a"
   end
   begin menuitem
-    text "Nebula"
-    action string "\e]20;tile/nebula.jpg;0+0:tile\a"
-  end
-  begin menuitem
     text "Oil On Canvas"
     action string "\e]20;tile/oil_on_canvas.png;0+0:tile\a"
-  end
-  begin menuitem
-    text "One If By Land"
-    action string "\e]20;tile/one_if_by_land.png;0+0:tile\a"
   end
   begin menuitem
     text "Pebble Beach"
@@ -436,10 +408,6 @@ begin menu
     action string "\e]20;tile/sitting_in_acid.png;0+0:tile\a"
   end
   begin menuitem
-    text "Space"
-    action string "\e]20;tile/space.png;0+0:tile\a"
-  end
-  begin menuitem
     text "Spring Rain"
     action string "\e]20;tile/spring_rain.png;0+0:tile\a"
   end
@@ -462,10 +430,6 @@ begin menu
   begin menuitem
     text "Trees Are Leafy"
     action string "\e]20;tile/trees_are_leafy.png;0+0:tile\a"
-  end
-  begin menuitem
-    text "Two If By Sea"
-    action string "\e]20;tile/two_if_by_sea.png;0+0:tile\a"
   end
   begin menuitem
     text "Veins 2"
@@ -499,10 +463,6 @@ begin menu
     action string "\e]20;scale/day-night.jpg;100\a"
   end
   begin menuitem
-    text "Good Morning"
-    action string "\e]20;scale/good-morning.jpg;100\a"
-  end
-  begin menuitem
     text "Midnight Sky"
     action string "\e]20;scale/midnight_sky.png;100\a"
   end
@@ -511,16 +471,8 @@ begin menu
     action string "\e]20;scale/Neopolis-horizon.jpg;100\a"
   end
   begin menuitem
-    text "Ripple"
-    action string "\e]20;scale/ripple.jpg;100\a"
-  end
-  begin menuitem
     text "Sailors Delight"
     action string "\e]20;scale/sailors_delight.png;100\a"
-  end
-  begin menuitem
-    text "Sunset"
-    action string "\e]20;scale/sunset.jpg;100\a"
   end
   begin menuitem
     text "Wasteland"
