@@ -5182,3 +5182,7 @@ Mon Mar  1 16:53:34 2004                        Michael Jennings (mej)
 
 Merging in new backgrounds.
 ----------------------------------------------------------------------
+Tue Mar  2 10:56:20 2004                        Michael Jennings (mej)
+
+New SRPM.
+----------------------------------------------------------------------
